<resources>
    <string name="banner_ad_unit_id" translatable="false">a150338e2b330bc</string>
    <string name="app_name">Ship Battle</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="yourcountry">Country:</string>
    <string name="friendcolon">Friend:</string>
    <string name="choosepasswordcolon">Choose password:</string>
    <string name="repeatpasswordcolon">Repeat password:</string>
    <string name="currentpasswordcolon">Current password:</string>
    <string name="choosenewpasswordcolon">Choose new password:</string>
    <string name="emailaddresscolon">Email address:</string>
    <string name="changepassword">Change Password</string>
    <string name="choosepassword">choose password</string>
    <string name="repeatpassword">repeat password</string>
    <string name="emailaddress">email address</string>
    <string name="service_label">Ship Battle</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_currentpassword">current password</string>
    <string name="hint_enterpartofname">enter (part of) a name</string>
    <string name="hint_pickausername">pick a username</string>
    <string name="hint_choosenewpassword">choose new password</string>
    <string name="msg_selectcountry">Please select your country</string>
    <string name="msg_usernamecannotbeempty">Username cannot be empty</string>
    <string name="msg_passwordcannotbeempty">Password cannot be empty</string>
    <string name="msg_loggedin">You are logged in</string>
    <string name="msg_unknownuser">Unknown user</string>
    <string name="msg_incorrectpassword">The password you entered is not correct</string>
    <string name="msg_incorrectversion">Please upgrade the app to the latest version</string>
    <string name="msg_invalidrequest">Strange things happening, invalid request</string>
    <string name="msg_nocommunication">Cannot communicate with game server, please check your internet connection</string>
    <string name="msg_thirtytwocharacters">Username cannot exceed 32 characters</string>
    <string name="msg_twocharacters">Username has to contain at least 2 characters</string>
    <string name="msg_notavalidemailaddress">Not a valid email address</string>
    <string name="msg_samepasswordtwice">Please type the same password twice</string>
    <string name="msg_nofunnystuff">Username cannot contain &amp;, \' or #</string>
    <string name="msg_noconnection">No Connection</string>
    <string name="msg_passwordsuccessfullychanged">Your password was successfully changed</string>
    <string name="msg_signupsuccess">You have signed up successfully</string>
    <string name="msg_usernametaken">This username already exists</string>
    <string name="msg_generalerror">General error</string>
    <string name="toast_loggingin">Logging in ...</string>
    <string name="toast_signingup">Signing up ...</string>
    <string name="toast_loggingoff">Logging off ...</string>
    <string name="toast_resigning">Resigning ..</string>
    <string name="toast_invitationsuccessful">Invitation successful</string>
    <string name="toast_alreadygamerunning">You already have a game or invitation with this player</string>
    <string name="toast_cannotinviteyourself">You cannot invite yourself</string>
    <string name="toast_playernonexistent">This player does not exist</string>
    <string name="toast_friendadded">Friend was successfully added</string>
    <string name="toast_friendremoved">Friend was successfully removed</string>
    <string name="toast_resignnotpossible">It is not possible to resign</string>
    <string name="toast_someerror">Some error happened</string>
    <string name="toast_notyourturn">It\'s not your turn</string>
    <string name="toast_alreadyshothere">Already shot here ...</string>
    <string name="toast_minimum2characters">Please enter at least 2 characters</string>
    <string name="toast_nosuchusersfound">No users found ...</string>
    <string name="toast_chat_limit_exceeded">Chat limit exceeded!</string>
    <string name="toast_cannot_enter_funny_stuff">Your message cannot contain &amp;, \' or #</string>
    <string name="ftoast_yousankaship">You sank %s!</string>
    <string name="ftoast_youlostaship">You lost %s ...</string>
    <string name="ftoast_addingfriend">Adding %s to friends list</string>
    <string name="ftoast_opponentresigned">%s resigned, you won!</string>
    <string name="fpick_youwon">You won vs. %s!</string>
    <string name="fpick_opponentbeatyou">%s beat you ...</string>
    <string name="fpick_youresigned">You resigned vs. %s</string>
    <string name="fpick_opponentresigned">%s resigned</string>
    <string name="fpick_pendinginvitation">Pending invitation to %s</string>
    <string name="fpick_setupyourfleet">Set up your fleet vs. %s</string>
    <string name="fpick_waitingfor">Waiting for %s to be ready</string>
    <string name="fpick_yourturn">Your turn vs. %s</string>
    <string name="fpick_opponentsturn">%s\'s turn</string>
    <string name="fpick_invitationfrom">Invitation from %s</string>
    <string name="fdialog_suretoaddfriend">Do you want to add %s to your friends list?</string>
    <string name="dialog_areyousure_to_start">Are you sure to start the game with this fleet?</string>
    <string name="fdialog_youwonin">You won in %d shots!</string>
    <string name="fdialog_suretoresign">Are you sure you want to resign vs. %s?</string>
    <string name="dialog_youlost">You lost ...</string>
    <string name="dialog_yourfriends">Your friends:</string>
    <string name="dialog_welcometoshipbattle">Welcome to Ship Battle</string>
    <string name="dialog_welcomeuitleg1">&#8226; Please take a moment to sign up for a free account.</string>
    <string name="dialog_welcomeuitleg2">&#8226; Your email address will only be used in case you may want to reset your password.</string>
    <string name="dialog_welcomeuitleg3">&#8226; Ship Battle uses rankings based on your country of residence, which you can also enter in the Sign Up screen.</string>
    <string name="dialog_gameoverviewscreen">Game Overview Screen</string>
    <string name="dialog_gameoverviewscreen_uitleg1">&#8226; This screen will show your active and recently finished games.</string>
    <string name="dialog_gameoverviewscreen_uitleg2">&#8226; You can search for opponents by tapping the magnifying glass.</string>
    <string name="dialog_gameoverviewscreen_uitleg3">&#8226; Tap the plus sign to start a new game with a friend, a random opponent or the computer.</string>
    <string name="fbtn_send_player_game_invitation">Send %s a game invitation</string>
    <string name="fbtn_add_player_to_friends_list">Add %s to friends list</string>
    <string name="fremove_player_from_friends_list">Remove %s from friends list?</string>
    <string name="btn_login">Log In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_send_game_invitation">Send game invitation</string>
    <string name="btn_add_to_friends_list">Add to friends list</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_search">Search</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_decline">Decline</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_rematch">Rematch!</string>
    <string name="btn_meh">Nevermind</string>
    <string name="btn_newgame">New game</string>
    <string name="btn_findfriends">Find players</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_stats">Statistics</string>
    <string name="btn_change">Change</string>
    <string name="btn_yeah_sure">Yeah, sure!</string>
    <string name="btn_not_now">Not now</string>
    <string name="btn_buy_premium_version">Buy Premium version</string>
    <string name="map_colon">Map:</string>
    <string name="theme_colon">Theme:</string>
    <string name="computer">Computer</string>
    <string name="likeshipbattle">Do you like Ship Battle?</string>
    <string name="giveareview">Give us a review in the Play Store!</string>
    <string name="ship_battleship">the aircraft carrier</string>
    <string name="ship_cruiser">"the cruiser</string>
    <string name="ship_frigate">a destroyer</string>
    <string name="ship_minesweeper">a submarine</string>
    <string name="fsfleet_history">%s\'s fleet history</string>
    <string name="fhas_no_fleet_history">%s has no fleet history yet</string>
    <string name="fnoti_opponentwaiting">%s has set up their fleet and is waiting for you</string>
    <string name="fnoti_youlostvs">You lost vs. %s</string>
    <string name="ffnoti_openinvitation_with_rating">%1$s (rating: %2$s) invites you to play a game of Ship Battle</string>
    <string name="ffnoti_openinvitation">%s invites you to play a game of Ship Battle</string>
    <string name="fnoti_24hleft">You have less than 24 hours left vs. %s</string>
    <string name="new_chat_message">New chat message</string>
    <string name="sett_sounds">Sound effects</string>
    <string name="sett_vibrations">Vibrations</string>
    <string name="sett_notifications">Notifications</string>
    <string name="sett_random">Receive invitations from random players</string>
    <string name="forgotpasswordsendemail">Forgot password? Send an email to info@ship-battle.com</string>
    <string name="selectacountry">select country</string>
    <string name="doubletap">Double tap to change a ship\'s orientation</string>
    <string name="setup_yourfleet">Set up your fleet vs.</string>
    <string name="invite_player">Invite player:</string>
    <string name="add_friends_list">Add to friends list</string>
    <string name="fplayerstats">%s\'s statistics</string>
    <string name="randomopponent">Random opponent</string>
    <string name="ratingcolon">Rating:</string>
    <string name="gameswoncolon">Games won:</string>
    <string name="gameslostcolon">Games lost:</string>
    <string name="worldrankcolon">World rank:</string>
    <string name="nationalrankcolon">National rank:</string>
    <string name="yournewratingcolon">Your new rating:</string>
    <string name="opponentsnewratingcolon">%s\'s new rating:</string>
    <string name="fyouwon_opponentresigned">You won because %s resigned</string>
    <string name="whatdoyouwanttodo">What would you like to do?</string>
    <string name="menu_logoff">Log Off</string>
    <string name="menu_resign">Resign</string>
    <string name="menu_rematch">Rematch</string>
    <string name="menu_about">About</string>
    <string name="menu_game_rules">Game Rules</string>
    <string name="menu_add_friend">Add Friend</string>
    <string name="menu_buy_premium">Upgrade to Premium</string>
    <string name="scorecolon">Score:</string>
    <string name="shipbattlerules">Ship Battle Rules</string>
    <string name="rules1">The goal of this game is to destroy your opponent\'s fleet before they can destroy yours. After you have set up your fleet, you take turns in shooting at a location in each other\'s play field.</string>
    <string name="rules2">Your fleet includes these ships:</string>
    <string name="oneaircraftcarrier">1 aircraft carrier</string>
    <string name="onecruiser">1 cruiser</string>
    <string name="twodestroyers">2 destroyers</string>
    <string name="threesubmarines">3 submarines</string>
    <string name="rules3">You have 72 hours to fire a shot. You can play as many games as you want simultaneously, but only one game at the time against the same opponent.</string>
    <string name="aboutshipbattle">About Ship Battle</string>
    <string name="developedbykipsapgames">Ship Battle is developed by Kipsap Games.</string>
    <string name="remarksemailthem">If you have remarks or suggestions please send them to info@ship-battle.com.</string>
    <string name="followus">Follow us on twitter: @KipsapGames</string>
</resources>