<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    > 

    <TextView
        android:id="@+id/textWelcomeTitleGP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:text="@string/dialog_gameoverviewscreen"
        android:textColor="@color/white"
        android:textSize="26dip" />
        

    <TextView
        android:id="@+id/textWelcomeTextGP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:gravity="center"
        android:text="@string/dialog_gameoverviewscreen_uitleg1"
        android:textColor="@color/white"
        android:textSize="20dip" />
    
    <TextView
        android:id="@+id/textWelcomeTextGP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:gravity="center"
        android:text="@string/dialog_gameoverviewscreen_uitleg2"
        android:textColor="@color/white"
        android:textSize="20dip" />
    
    <TextView
        android:id="@+id/textWelcomeTextGP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:gravity="center"
        android:text="@string/dialog_gameoverviewscreen_uitleg3"
        android:textColor="@color/white"
        android:textSize="20dip" />
    
</LinearLayout>