<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RootView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/new_backgr_low_border"
    android:gravity="top"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/background_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="28dp"
        android:adjustViewBounds="true"
        android:src="@drawable/background_logo" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dip"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/background_blue"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="240dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dip"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/background_blue"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/EditText02"
        android:layout_width="240dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:singleLine="true" />    

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="21dip"
        android:text="@string/btn_login"
        android:background="@drawable/menu_button"
        android:textColor="@color/background_blue"
        android:textSize="21sp" />

	<TextView
	    android:id="@+id/TextView01"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_margin="8dip"
	    android:textColor="@color/background_blue"
	    android:gravity="center" />
	
	
	<TextView
	    android:id="@+id/TextView02"
	    android:textSize="9dip"
	    android:text="@string/forgotpasswordsendemail"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/background_blue"
	    android:layout_gravity="bottom"
	    android:layout_marginTop="8dip"
	    android:gravity="center" />
    
</LinearLayout>